name:                reified-records 
version:             0.1.0.0
synopsis:            Reify records to Maps and back again
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
category:            Generics
build-type:          Simple
cabal-version:       >=1.10
library
  exposed-modules:     Data.Generic.Reify.Record
  other-extensions:    DeriveDataTypeable
  build-depends:       base >=4.6 && <4.7, containers >=0.5 && <0.6, mtl >=2.1 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  